# angelfish

./: .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  Cargo.toml  README.md  org.kde.angelfish.desktop  org.kde.angelfish.json  org.kde.angelfish.metainfo.xml  org.kde.mobile.angelfish.desktop  org.kde.mobile.angelfish.json  org.kde.mobile.angelfish.metainfo.xml  snapcraft.yaml
.gitlab/: dependabot.yml
.gitlab/issue_templates/: default_issue.md
angelfish-webapp/: CMakeLists.txt  main.cpp
angelfish-webapp/contents/ui/: WebAppView.qml  webapp.qml
angelfish-webapp/qml/: WebApp.qml  WebAppView.qml
autotests/: CMakeLists.txt  browsermanagertest.cpp  configtest.cpp  dbmanagertest.cpp  tabsmodeltest.cpp
flatpak/: corrosion-generated-sources.json  corrosion.json  generated-sources.json  kf5feedback.json  kirigami-addons.json  regenerate-sources.sh
lib/: CMakeLists.txt  angelfish.notifyrc  angelfishsettings.kcfg  angelfishsettings.kcfgc  angelfishwebprofile.cpp  angelfishwebprofile.h  bookmarkshistorymodel.cpp  bookmarkshistorymodel.h  browsermanager.cpp  browsermanager.h  dbmanager.cpp  dbmanager.h  downloadmanager.cpp  downloadmanager.h  iconimageprovider.cpp  iconimageprovider.h  resources.qrc  settingshelper.cpp  sqlquerymodel.cpp  sqlquerymodel.h  tabsmodel.cpp  tabsmodel.h  urlobserver.cpp  urlobserver.h  urlutils.cpp  urlutils.h  useragent.cpp  useragent.h
lib/contents/migrations/2022-08-14-223019_init/: up.sql
lib/contents/ui/: AuthSheet.qml  DownloadQuestion.qml  ErrorHandler.qml  JavaScriptDialogSheet.qml  ListWebView.qml  PermissionQuestion.qml  PrintPreview.qml  Questions.qml  SelectDropdownOverrideDialog.qml  WebDeveloperTools.qml  WebView.qml  select_overrides.js
lib/dom-distiller-dist/: README.md
po/ar/: angelfish.po
po/ast/: angelfish.po
po/az/: angelfish.po
po/ca/: angelfish.po
po/ca@valencia/: angelfish.po
po/cs/: angelfish.po
po/da/: angelfish.po
po/de/: angelfish.po
po/el/: angelfish.po
po/en_GB/: angelfish.po
po/eo/: angelfish.po
po/es/: angelfish.po
po/et/: angelfish.po
po/eu/: angelfish.po
po/fi/: angelfish.po
po/fr/: angelfish.po
po/ga/: angelfish.po
po/gl/: angelfish.po
po/he/: angelfish.po
po/hi/: angelfish.po
po/hu/: angelfish.po
po/ia/: angelfish.po
po/id/: angelfish.po
po/it/: angelfish.po
po/ja/: angelfish.po
po/ka/: angelfish.po
po/ko/: angelfish.po
po/lt/: angelfish.po
po/lv/: angelfish.po
po/nl/: angelfish.po
po/nn/: angelfish.po
po/pa/: angelfish.po
po/pl/: angelfish.po
po/pt/: angelfish.po
po/pt_BR/: angelfish.po
po/ru/: angelfish.po
po/sa/: angelfish.po
po/sk/: angelfish.po
po/sl/: angelfish.po
po/sv/: angelfish.po
po/ta/: angelfish.po
po/tr/: angelfish.po
po/ug/: angelfish.po
po/uk/: angelfish.po
po/x-test/: angelfish.po
po/zh_CN/: angelfish.po
po/zh_TW/: angelfish.po
src/: CMakeLists.txt  adblockfilterlistsmanager.cpp  adblockfilterlistsmanager.h  adblockfilterlistsmodel.cpp  adblockfilterlistsmodel.h  adblockurlinterceptor.cpp  adblockurlinterceptor.h  angelfish.notifyrc  angelfish.qrc  desktopfilegenerator.cpp  domdistiller.cpp  domdistiller.h  downloadsmodel.cpp  downloadsmodel.h  interfaceloader.cpp  interfaceloader.h  main.cpp  readerview.cpp  readerview.h  webappcreator.cpp  webappcreator.h  webappmanager.cpp  webappmanager.h  webappmanagermodel.cpp  webappmanagermodel.h
src/contents/ui/: AdblockFilterDownloadQuestion.qml  Bookmarks.qml  ConfigurationsView.qml  Downloads.qml  FindInPageBar.qml  HapticsEffectLoader.qml  History.qml  HistorySheet.qml  InputSheet.qml  Navigation.qml  NavigationEntrySheet.qml  NewTabQuestion.qml  ReaderViewPage.qml  SettingsAdblock.qml  SettingsGeneral.qml  SettingsNavigationBarPage.qml  SettingsPage.qml  SettingsSearchEnginePage.qml  SettingsWebApps.qml  ShareSheet.qml  Tabs.qml  UrlDelegate.qml  mobile.qml  webbrowser.qml
src/contents/ui/components/: BottomDrawer.qml
src/contents/ui/desktop/: BookmarksPage.qml  HistoryPage.qml  SettingsPage.qml  TabHistory.qml  Tabs.qml  desktop.qml
src/contents/ui/desktop/settings/: GeneralSettingsPage.qml  HomeSettingsPage.qml
src/dom-distiller-dist/: domdistiller.js.license
src/qml/: AdblockFilterDownloadQuestion.qml  AngelfishMenu.qml  Bookmarks.qml  Downloads.qml  FindInPageBar.qml  HapticsEffectLoader.qml  HapticsEffectWrapper.qml  History.qml  HistorySheet.qml  Mobile.qml  Navigation.qml  NavigationEntrySheet.qml  Tabs.qml  UrlDelegate.qml  WebAppNameDialog.qml
src/qml/desktop/: BookmarksPage.qml  Desktop.qml  DesktopTabDelegate.qml  DesktopTabs.qml  HistoryPage.qml  TabHistory.qml
src/regex-weburl/: RegexWebUrl.js
src/rs/: Cargo.toml  build.rs
src/rs/adblock/: Cargo.toml
src/rs/adblock/src/: adblock.rs
src/rs/readability/: Cargo.toml  build.rs
src/rs/readability/src/: lib.rs  readability.rs
src/rs/src/: adblock.rs  lib.rs  readability.rs
src/settings/: AngelfishConfigurationView.qml  CMakeLists.txt  DesktopHomeSettingsPage.qml  SettingsAdblock.qml  SettingsGeneral.qml  SettingsNavigationBarPage.qml  SettingsSearchEnginePage.qml  SettingsWebApps.qml
